--- a/Adv_Day6_B12.ipynb
+++ b/Adv_Day6_B12.ipynb
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "# Variance - Average of the squared difference from the mean \n",
-    "# (i.e.) Square of (salary - salary mean) + ..... divided by no. of total salaries\n",
+    "# (i.e.) Square of (salary - salary mean) + .....(square of rest of the salaries) divided by total no. of salaries\n",
     "# Variance shows how far the data points(salaries) are from the salary mean value"
    ]
   },
